# NewHaskellProject

./: .gitignore  .uuid  Makefile  Readme.md  duhaskell.cabal  extensions.md  install-tools  stack.yaml
.devcontainer/: devcontainer.json
.setup/: stack1.yaml  stack2.yaml
Learning-Samples/: LearningSamples.cabal  Main.hs  _Main.hsplay  stack.yaml
Learning-Samples/Samples/: Applicatives.hs  Functor.hs  Monads.Reader.hs  Monads.State.hs  Rpn.hs  RpnSafe.hs  _Applicatives.hsplay  _Functor.hsplay
lib/Module/: MonadRWST.hs
src/: Main.hs  Project.cabal  duhaskell.cabal  stack.yaml
src/app/: Main.hs
src/lib/: RpnSafe.hs
src/lib/Module/: AppTypes.hs  RpnSafe.hs
