cabal-version: 1.12
name: duhaskell
version: 1.0
stability: experimental

library
    exposed-modules:
        Module.RpnSafe
        Module.MonadRWST
        Module.AppTypes
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        base -any
        ,mtl
        ,filepath
        ,directory
        ,unix
        ,extra
        ,optparse-applicative
        ,text


executable duh
    main-is: Main.hs
    hs-source-dirs: app
    default-language: Haskell2010
    build-depends:
        base -any
        ,mtl
        ,duhaskell

