cabal-version: 1.12
name: Project
version: 1.0
stability: experimental

library internal-lib
    exposed-modules:
        Module.RpnSafe
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        base -any
        ,mtl
        ,filepath
        ,directory
        ,unix-compat
        ,extra
        ,optparse-applicative
        ,text


executable duh
    main-is: Main.hs
    other-modules:
        
    default-language: Haskell2010
    build-depends:
        base -any
        ,mtl
        ,internal-lib
