cabal-version: 1.12
name: Project
version: 1.0
stability: experimental

library internal
    exposed-modules:
        Module.RpnSafe
        Module.MonadRWST
        Module.AppTypes
    hs-source-dirs:
        lib
    default-language: Haskell2010
    build-depends:
        base -any
        ,mtl
        ,filepath
        ,directory
        ,unix
        ,extra
        ,optparse-applicative
        ,text


executable duh
    main-is: Main.hs
    hs-source-dirs: app
    -- other-modules:
    
    default-language: Haskell2010
    build-depends:
        base -any
        ,mtl
        ,filepath
        ,directory
        ,unix
        ,extra
        ,optparse-applicative
        ,text
        ,internal
